--- a/en-US/pages/module_7.html
+++ b/en-US/pages/module_7.html
@@ -225,8 +225,8 @@
                                 <img class="d-block w-100 img-darken05" src="/static/module4_3-crop.png" alt="Third slide">
                             </div>
                             <div class="centervh">
-                                <h2 class="text-light carousel-text-line1">Level VI</h2>
-                                <h1 class="text-light carousel-text-line2">Professional Portfolio</h1>
+                                <h2 class="text-light carousel-text-line1">Level VII</h2>
+                                <h1 class="text-light carousel-text-line2">Java Script</h1>
                             </div>
                         </div>
                     </div>
@@ -237,19 +237,18 @@
                             <div class="row">
                                 <div class="col-12">
                                     <p>
-                                        In this course, students will develop the following Web Applications:
+                                        In this course, students will study Java Script concepts:
                                     </p>
                                     <ul>
-                                        <li>To do list</li>
-                                        <li>Notes App</li>
-                                        <li>Quiz app</li>
-                                        <li>API bot</li>
-                                        <li>Blog App</li>
-                                        <li>Portfolio Website</li>
-                                        <li>Currency Converter</li>
-                                        <li>Flashcards App</li>
-                                        <li>Password generator</li>
-                                        <li>Sales Receipt App</li>
+                                        <li> Variables</li>   
+                                        <li>Data types</li>
+                                        <li>Operators</li>
+                                        <li>Expressions</li>
+                                        <li>Control Structures: if, else, switch, for, while, do-while.</li>
+                                        <li>Functions: Function declarations, function expressions, arrow functions, parameters, and return values.</li>
+                                        <li>Objects: Object literals, properties, methods, and prototypes.</li>
+                                        <li>Arrays: Array methods (map, filter, reduce, forEach), array destructuring, spread operator.</li>
+                                        <li>Prototypes and Inheritance</li>
                                     </ul>  
                                     <br>
                                     <!-- <h5 style="margin-bottom: 15px">Course duration – 25 classes.</h5> -->
