--- a/en-US/index.html
+++ b/en-US/index.html
@@ -238,20 +238,24 @@
                                 <br><br>
                             
                             </p>
+                    <div class="card no-border" style="width: 100%;">
+                        <div class="card-body card-body-style">
                             <br><br>
                             <p class="card-text">
                                 <br><br>
                                 
-                            </p>One of the most compelling reasons to take our programming class is the real-world application of the skills you’ll gain. Through practical projects and interactive assignments, you’ll develop solutions to real challenges, building a portfolio that showcases your abilities. This hands-on experience not only reinforces your learning but also enhances your resume, giving you tangible proof of your skills to show future employers or clients.
-                            <br><br>
+                            One of the most compelling reasons to take our programming class is the real-world application of the skills you’ll gain. Through practical projects and interactive assignments, you’ll develop solutions to real challenges, building a portfolio that showcases your abilities. This hands-on experience not only reinforces your learning but also enhances your resume, giving you tangible proof of your skills to show future employers or clients.
+                        </p>
+                        <br><br>
 
                             <p class="card-text">
                                 The benefits of learning programming extend far beyond just gaining technical skills. It enhances your problem-solving abilities, fosters logical thinking, and improves your analytical skills. Our classes are designed to cultivate these attributes, ensuring you not only learn how to code but also develop a mindset that thrives in complex and dynamic environments. This holistic approach will serve you well in any career or project you undertake.
                             </p>
                             <br><br>
 
-                            <p class="card-text"> <!--Make this a link that dispalys sample lesson and phone number -->>
-                                Don’t miss out on the chance to be part of a field that is shaping the future - enroll today and start your journey towards becoming a proficient programmer.
+                            <p class="card-text"> <!--Make this a link that dispalys sample lesson and phone number -->
+                                Don’t miss out on the chance to be part of a field that is shaping the future - <a href="/en-US/pages/signup.html" class="nav-link link-dark">enroll today</a>
+                                    <i class="fas fa-check"></i> and start your journey towards becoming a proficient programmer.
                             </p>
                             <br>
                             <div class="centerh">
