Signup Page modified

--- a/en-US/pages/signup.html
+++ b/en-US/pages/signup.html
@@ -108,10 +108,18 @@
                                     <i class="fas fa-minus"></i>
                                     Level VI. Web Scraping. APIs.
                                  </a>
-                                <a href="/en-US/pages/module_7.html" class="nav-link link-dark">
-                                <i class="fas fa-fw"></i>
-                                <i class="fas fa-minus"></i>
-                                    Level VII. Developing a Professional Portfolio
+                                 <a href="/en-US/pages/module_7.html" class="nav-link link-dark">
+                                    <i class="fas fa-fw"></i>
+                                    <i class="fas fa-minus"></i>
+                                    Level VII. Java Script.
+                                </a>
+                                <a href="/en-US/pages/module_8.html" class="nav-link link-dark">
+                                    <i class="fas fa-fw"></i>
+                                    <i class="fas fa-minus"></i>
+                                    Level VIII. Developing a<br />
+                                    <i class="fas fa-fw"></i>
+                                    <i class="fas fa-fw"></i>
+                                    Professional Portfolio
                                 </a>
                             </li>
                             <li>
@@ -194,7 +202,15 @@
                             <a href="/en-US/pages/module_7.html" class="nav-link link-dark">
                                 <i class="fas fa-fw"></i>
                                 <i class="fas fa-minus"></i>
-                                Level VII. Developing a Professional Portfolio
+                                Level VII. Java Script.
+                            </a>
+                            <a href="/en-US/pages/module_8.html" class="nav-link link-dark">
+                                <i class="fas fa-fw"></i>
+                                <i class="fas fa-minus"></i>
+                                Level VIII. Developing a<br />
+                                <i class="fas fa-fw"></i>
+                                <i class="fas fa-fw"></i>
+                                Professional Portfolio
                             </a>
                         </li>
                         <li>
@@ -231,7 +247,7 @@
                             <!-- <h5 class="card-title">Card title</h5> -->
                             <!-- <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6> -->
 
-                            <div class="show_on_module_1">
+                            <!-- <div class="show_on_module_1">
                                 <div id="module_1_pricing_content"></div>
                             </div>
                             <div class="show_on_module_2">
@@ -251,20 +267,13 @@
                             </div>
                             <div class="show_on_module_7">
                                 <div id="module_7_pricing_content"></div>
-                            </div>
-                            <p class="card-text">Classes are held twice a week, Monday through Friday, from 4 pm till 8 pm (NYC time zone). </p>                     
-        
+                            </div> -->
+                            <p class="card-text">Secure your spot today! We will waive the $35 registration fee to the first 15 students!
+                                Call Us or Text: (908)830-5127 </p>  
+                                <br>                   
+                            <p>Classes are held in Milltown, NJ 08850
                             <br>
-                            <p>To sign up, send a request to codingprepschool@gmail.com. </p>
-                            <p>In this request, you need to indicate the following:</p>
-                            <ul>
-                                <li>student’s first and last name;</li>
-                                <li>student’s age;</li>
-                                <li>the days and the time when you would like to take classes 
-                                    (e.g.: Monday 4 pm and Thursday 4pm);</li>
-                                <li>the OS system that the student uses (Windows -7,8,9, or 10, MacOS, Linux).</li>
-                            </ul>
-                            <p> Once you submit your request, you will receive a confirmation from the administrator.</p>
+                            
                         </div>
                     </div>
                 </div>
