CHanged Level to Course in all modules

--- a/en-US/pages/module_4.html
+++ b/en-US/pages/module_4.html
@@ -62,17 +62,17 @@
                                 <a href="/en-US/pages/module_1.html" class="nav-link link-dark">
                                     <i class="fas fa-fw"></i>
                                     <i class="fas fa-minus"></i>
-                                    Level I. Python
+                                    Course I. Python
                                 </a>
                                 <a href="/en-US/pages/module_2.html" class="nav-link link-dark">
                                     <i class="fas fa-fw"></i>
                                     <i class="fas fa-minus"></i>
-                                    Level II. HTML and CSS
+                                    Course II. HTML and CSS
                                 </a>
                                 <a href="/en-US/pages/module_3.html" class="nav-link link-dark">
                                     <i class="fas fa-fw"></i>
                                     <i class="fas fa-minus"></i>
-                                    Level III. Foundations of Flask<br />
+                                    Course III. Foundations of Flask<br />
                                     <i class="fas fa-fw"></i>
                                     <i class="fas fa-fw"></i>
                                     Creating Web Applications
@@ -80,27 +80,27 @@
                                 <a href="/en-US/pages/module_4.html" class="nav-link link-dark">
                                     <i class="fas fa-fw"></i>
                                     <i class="fas fa-minus"></i>
-                                    Level IV. Git. Github.
+                                    Course IV. Git. Github.
                                 </a>
                                 <a href="/en-US/pages/module_5.html" class="nav-link link-dark">
                                     <i class="fas fa-fw"></i>
                                     <i class="fas fa-minus"></i>
-                                    Level V. SQL.
+                                    Course V. SQL.
                                 </a>
                                 <a href="/en-US/pages/module_6.html" class="nav-link link-dark">
                                     <i class="fas fa-fw"></i>
                                     <i class="fas fa-minus"></i>
-                                    Level VI. Web Scraping. APIs.
+                                    Course VI. Web Scraping. APIs.
                                 </a>
                                 <a href="/en-US/pages/module_7.html" class="nav-link link-dark">
                                     <i class="fas fa-fw"></i>
                                     <i class="fas fa-minus"></i>
-                                    Level VII. Java Script.
+                                    Course VII. Java Script.
                                 </a>
                                 <a href="/en-US/pages/module_8.html" class="nav-link link-dark">
                                     <i class="fas fa-fw"></i>
                                     <i class="fas fa-minus"></i>
-                                    Level VIII. Developing a<br />
+                                    Course VIII. Developing a<br />
                                     <i class="fas fa-fw"></i>
                                     <i class="fas fa-fw"></i>
                                     Professional Portfolio
@@ -153,17 +153,17 @@
                             <a href="/en-US/pages/module_1.html" class="nav-link link-dark">
                                 <i class="fas fa-fw"></i>
                                 <i class="fas fa-minus"></i>
-                                Level I. Python
+                                Course I. Python
                             </a>
                             <a href="/en-US/pages/module_2.html" class="nav-link link-dark">
                                 <i class="fas fa-fw"></i>
                                 <i class="fas fa-minus"></i>
-                                Level II. HTML and CSS
+                                Course II. HTML and CSS
                             </a>
                             <a href="/en-US/pages/module_3.html" class="nav-link link-dark">
                                 <i class="fas fa-fw"></i>
                                 <i class="fas fa-minus"></i>
-                                Level III. Foundations of Flask<br />
+                                Course III. Foundations of Flask<br />
                                 <i class="fas fa-fw"></i>
                                 <i class="fas fa-fw"></i>
                                 Creating Web Applications
@@ -171,27 +171,27 @@
                             <a href="/en-US/pages/module_4.html" class="nav-link link-dark">
                                 <i class="fas fa-fw"></i>
                                 <i class="fas fa-minus"></i>
-                                Level IV. Git. Github.
+                                Course IV. Git. Github.
                             </a>
                             <a href="/en-US/pages/module_5.html" class="nav-link link-dark">
                                 <i class="fas fa-fw"></i>
                                 <i class="fas fa-minus"></i>
-                                Level V. SQL
+                                Course V. SQL
                             </a>
                             <a href="/en-US/pages/module_6.html" class="nav-link link-dark">
                                 <i class="fas fa-fw"></i>
                                 <i class="fas fa-minus"></i>
-                                Level VI. Web Scraping. APIs.
+                                Course VI. Web Scraping. APIs.
                             </a>
                             <a href="/en-US/pages/module_7.html" class="nav-link link-dark">
                                 <i class="fas fa-fw"></i>
                                 <i class="fas fa-minus"></i>
-                                Level VII. Java Script.
+                                Course VII. Java Script.
                             </a>
                             <a href="/en-US/pages/module_8.html" class="nav-link link-dark">
                                 <i class="fas fa-fw"></i>
                                 <i class="fas fa-minus"></i>
-                                Level VIII. Developing a<br />
+                                Course VIII. Developing a<br />
                                 <i class="fas fa-fw"></i>
                                 <i class="fas fa-fw"></i>
                                 Professional Portfolio
@@ -223,7 +223,7 @@
                                 <img class="d-block w-100 img-darken05" src="/static/module4_3-crop.png" alt="Third slide">
                             </div>
                             <div class="centervh">
-                                <h2 class="text-light carousel-text-line1">Level IV</h2>
+                                <h2 class="text-light carousel-text-line1">Course IV</h2>
                                 <h1 class="text-light display-1 carousel-text-line2">Git.GitHub.</h1>
                             </div>
                         </div>
