--- a/en-US/pages/signup.html
+++ b/en-US/pages/signup.html
@@ -78,17 +78,17 @@
                                 <a href="/en-US/pages/module_1.html" class="nav-link link-dark">
                                     <i class="fas fa-fw"></i>
                                     <i class="fas fa-minus"></i>
-                                    Level I. Python
+                                    Course I. Python
                                 </a>
                                 <a href="/en-US/pages/module_2.html" class="nav-link link-dark">
                                     <i class="fas fa-fw"></i>
                                     <i class="fas fa-minus"></i>
-                                    Level II. HTML and CSS
+                                    Course II. HTML and CSS
                                 </a>
                                 <a href="/en-US/pages/module_3.html" class="nav-link link-dark">
                                     <i class="fas fa-fw"></i>
                                     <i class="fas fa-minus"></i>
-                                    Модуль III. FLASK <br />
+                                    Course III. FLASK <br />
                                     <i class="fas fa-fw"></i>
                                     <i class="fas fa-fw"></i>
                                     Creating Web Applications
@@ -96,27 +96,27 @@
                                 <a href="/en-US/pages/module_4.html" class="nav-link link-dark">
                                     <i class="fas fa-fw"></i>
                                     <i class="fas fa-minus"></i>
-                                   Level IV. Git. Github.
+                                   Course IV. Git. Github.
                                 </a>
                                 <a href="/en-US/pages/module_5.html" class="nav-link link-dark">
                                     <i class="fas fa-fw"></i>
                                     <i class="fas fa-minus"></i>
-                                    Level V. SQL
+                                    Course V. SQL
                                 </a>
                                 <a href="/en-US/pages/module_6.html" class="nav-link link-dark">
                                     <i class="fas fa-fw"></i>
                                     <i class="fas fa-minus"></i>
-                                    Level VI. Web Scraping. APIs.
+                                    Course VI. Web Scraping. APIs.
                                  </a>
                                  <a href="/en-US/pages/module_7.html" class="nav-link link-dark">
                                     <i class="fas fa-fw"></i>
                                     <i class="fas fa-minus"></i>
-                                    Level VII. Java Script.
+                                    Course VII. Java Script.
                                 </a>
                                 <a href="/en-US/pages/module_8.html" class="nav-link link-dark">
                                     <i class="fas fa-fw"></i>
                                     <i class="fas fa-minus"></i>
-                                    Level VIII. Developing a<br />
+                                    Course VIII. Developing a<br />
                                     <i class="fas fa-fw"></i>
                                     <i class="fas fa-fw"></i>
                                     Professional Portfolio
@@ -169,17 +169,17 @@
                             <a href="/en-US/pages/module_1.html" class="nav-link link-dark">
                                 <i class="fas fa-fw"></i>
                                 <i class="fas fa-minus"></i>
-                                Level I. Python
+                                Course I. Python
                             </a>
                             <a href="/en-US/pages/module_2.html" class="nav-link link-dark">
                                 <i class="fas fa-fw"></i>
                                 <i class="fas fa-minus"></i>
-                                Level II. HTML and CSS
+                                Course II. HTML and CSS
                             </a>
                             <a href="/en-US/pages/module_3.html" class="nav-link link-dark">
                                 <i class="fas fa-fw"></i>
                                 <i class="fas fa-minus"></i>
-                                Level III. Foundations of Flask<br />
+                                Course III. Foundations of Flask<br />
                                 <i class="fas fa-fw"></i>
                                 <i class="fas fa-fw"></i>
                                 Creating Web Applications
@@ -187,27 +187,27 @@
                             <a href="/en-US/pages/module_4.html" class="nav-link link-dark">
                                 <i class="fas fa-fw"></i>
                                 <i class="fas fa-minus"></i>
-                                Level IV. Git. Github.
+                                Course IV. Git. Github.
                             </a>
                             <a href="/en-US/pages/module_5.html" class="nav-link link-dark">
                                 <i class="fas fa-fw"></i>
                                 <i class="fas fa-minus"></i>
-                                Level V. SQL
+                                Course V. SQL
                             </a>
                             <a href="/en-US/pages/module_6.html" class="nav-link link-dark">
                                 <i class="fas fa-fw"></i>
                                 <i class="fas fa-minus"></i>
-                                Level VI. Web Scraping. APIs.
+                                Course VI. Web Scraping. APIs.
                             </a>
                             <a href="/en-US/pages/module_7.html" class="nav-link link-dark">
                                 <i class="fas fa-fw"></i>
                                 <i class="fas fa-minus"></i>
-                                Level VII. Java Script.
+                                Course VII. Java Script.
                             </a>
                             <a href="/en-US/pages/module_8.html" class="nav-link link-dark">
                                 <i class="fas fa-fw"></i>
                                 <i class="fas fa-minus"></i>
-                                Level VIII. Developing a<br />
+                                Course VIII. Developing a<br />
                                 <i class="fas fa-fw"></i>
                                 <i class="fas fa-fw"></i>
                                 Professional Portfolio
