Tried to take out the button for the russian lang

--- a/en-US/pages/module_1.html
+++ b/en-US/pages/module_1.html
@@ -223,7 +223,7 @@
                                 <img class="d-block w-100 img-darken05" src="/static/module1_3-crop.png" alt="Third slide">
                             </div>
                             <div class="centervh">
-                                <h2 class="text-light carousel-text-line1">Модуль I</h2>
+                                <h2 class="text-light carousel-text-line1">Course I</h2>
                                 <h1 class="text-light display-1 carousel-text-line2">Python</h1>
                             </div>
                         </div>
