--- a/en-US/index.html
+++ b/en-US/index.html
@@ -213,7 +213,7 @@
                     <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img class="d-block w-100 img-darken08" src="/static/pic_1.jpg" alt="First slide">
+                                <img class="d-block w-100 img-darken08" src="/static/pic_1_mod.jpg" alt="First slide">
                             </div>
                             <div class="carousel-item">
                                 <img class="d-block w-100 img-darken07" src="/static/pic_2.jpg" alt="Second slide">
