--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
                             <img src="/static/wolga-logo-green.png" alt="" width="30" height="24" class="d-inline-block align-text-top">
                             <span class="fs-5 link-dark logo-caption">Coding Prep School</span>
                         </span>
-                        <span class="text-end" style="padding-right: 10px;">
+                        <!-- <span class="text-end" style="padding-right: 10px;">
                             <a style="font-size: 0.8rem" href="/en-US/index.html"><span class="icon-flag-us">&nbsp;&nbsp;&nbsp;&nbsp;</span> <span class="icon-flag-gb">&nbsp;&nbsp;&nbsp;&nbsp;</span> <span class="icon-flag-ca">&nbsp;&nbsp;&nbsp;&nbsp;</span> English</a><br><a style="font-size: 0.8rem" href="/ru/index.html"><span class="icon-flag-ru">&nbsp;&nbsp;&nbsp;&nbsp;</span> Русский</a>
-                        </span>        
+                        </span>         -->
                     </div>
                 </nav>
 
