--- a/en-US/index.html
+++ b/en-US/index.html
@@ -227,7 +227,7 @@
                             <div class="carousel-item">
                                 <img class="d-block w-100 img-darken07" src="/static/pic_5.jpg" alt="Fifth slide">
                             </div>
-                            <h1 class="text-light display-1 centervh">Coding Prep School</h1>
+                            <h1 class="text-light display-3 centervh">Coding Prep School</h1>
                         </div>
                     </div>
 
@@ -237,14 +237,14 @@
                             <!-- <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6> -->
                             <!-- <p class="card-text"> -->
 
-                            <p class="card text-center">Join a community of passionate learners and experienced mentors who are dedicated to your success. Our classes offer more than just technical training; it’s a collaborative environment where you can network, share ideas, and grow alongside fellow students. With personalized feedback, support from instructors, and access to a wealth of resources, you’ll have everything you need to thrive in your programming journey.
+                            <p class="text-center">Join a community of passionate learners and experienced mentors who are dedicated to your success. Our classes offer more than just technical training; it’s a collaborative environment where you can network, share ideas, and grow alongside fellow students. With personalized feedback, support from instructors, and access to a wealth of resources, you’ll have everything you need to thrive in your programming journey.
                             </p>
-                            <p class="card text-center">
+                            <p class="text-center">
                             One of the most compelling reasons to take our programming class is the real-world application of the skills you’ll gain. Through practical projects and interactive assignments, you’ll develop solutions to real challenges, building a portfolio that showcases your abilities. This hands-on experience not only reinforces your learning but also enhances your resume, giving you tangible proof of your skills to show future employers or clients.
                             </p>
                             <br><br>
 
-                            <p class="card text-center">
+                            <p class="text-center">
                             Our curriculum is designed in a way that incrementally builds on learned concepts. Our students gain knowledge in full-stack software engineering without being overwhelmed. Our students acquire skills in front-end and back-end development, as well as data structures, analysis and methods of data storage. Our goal is to help students grow and develop the ability to create software in the modern three-tiered architecture.  
                             </p>
                             <br>
@@ -252,12 +252,12 @@
                                     <img style="width: 90%" src="/static/3-tier-architecture.png" alt="Diagram of Three Tier Architecture">
                                 </div>
                                 <br><br>
-                            <p class="card text-center">
+                            <p class="text-center">
                             The benefits of learning programming extend far beyond just gaining technical skills. It enhances your problem-solving abilities, fosters logical thinking, and improves your analytical skills. Our classes are designed to cultivate these attributes, ensuring you not only learn how to code but also develop a mindset that thrives in complex and dynamic environments. This holistic approach will serve you well in any career or project you undertake.
                             </p>
                             <br><br>
 
-                            <p class="card text-center"> 
+                            <p class="text-center"> 
                             Don’t miss out on the chance to be part of a field that is shaping the future -<a href="/en-US/pages/signup.html" class="nav link-underline text-nowrap">enroll today</a>and start your journey towards becoming a proficient programmer. 
                             </p>
                         </div>
