Commented out language buttons

--- a/en-US/index.html
+++ b/en-US/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">  
+<html>  
     <head>  
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css" rel="stylesheet"  type='text/css'>
@@ -33,9 +33,7 @@
                             <img src="/static/wolga-logo-green.png" alt="" width="30" height="24" class="d-inline-block align-text-top">
                             <span class="fs-5 link-dark logo-caption">Coding Prep School</span>
                         </span>
-                        <!-- <span class="text-end" style="padding-right: 10px;">
-                            <a style="font-size: 0.8rem" href="/en-US/index.html"><span class="icon-flag-us">&nbsp;&nbsp;&nbsp;&nbsp;</span> <span class="icon-flag-gb">&nbsp;&nbsp;&nbsp;&nbsp;</span> <span class="icon-flag-ca">&nbsp;&nbsp;&nbsp;&nbsp;</span> English</a><br><a style="font-size: 0.8rem" href="/ru/index.html"><span class="icon-flag-ru">&nbsp;&nbsp;&nbsp;&nbsp;</span> Русский</a>
-                        </span>         -->
+                       
                     </div>
                 </nav>
 
@@ -255,7 +253,7 @@
                                     <img style="width: 90%" src="/static/3-tier-architecture.png" alt="Diagram of Three Tier Architecture">
                                 </div>
                                 <br>
-                                
+
                             <p class="text-center">
                             The benefits of learning programming extend far beyond just gaining technical skills. It enhances your problem-solving abilities, fosters logical thinking, and improves your analytical skills. Our classes are designed to cultivate these attributes, ensuring you not only learn how to code but also develop a mindset that thrives in complex and dynamic environments. This holistic approach will serve you well in any career or project you undertake.
                             </p>
@@ -307,3 +305,10 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js" integrity="sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/" crossorigin="anonymous"></script>
     </body>  
 </html>  
+
+
+<!-- lang="en" -->
+
+ <!-- (line 36)<span class="text-end" style="padding-right: 10px;">
+                            <a style="font-size: 0.8rem" href="/en-US/index.html"><span class="icon-flag-us">&nbsp;&nbsp;&nbsp;&nbsp;</span> <span class="icon-flag-gb">&nbsp;&nbsp;&nbsp;&nbsp;</span> <span class="icon-flag-ca">&nbsp;&nbsp;&nbsp;&nbsp;</span> English</a><br><a style="font-size: 0.8rem" href="/ru/index.html"><span class="icon-flag-ru">&nbsp;&nbsp;&nbsp;&nbsp;</span> Русский</a>
+                        </span>         -->
