--- a/en-US/pages/signup.html
+++ b/en-US/pages/signup.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">  
+<html>  
     <head>  
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css" rel="stylesheet"  type='text/css'>
@@ -49,9 +49,9 @@
                             <img src="/static/wolga-logo-green.png" alt="" width="30" height="24" class="d-inline-block align-text-top">
                             <span class="fs-5 link-dark logo-caption">Coding Prep School</span>
                         </span>
-                        <span class="text-end" style="padding-right: 10px;">
+                        <!-- <span class="text-end" style="padding-right: 10px;">
                             <a style="font-size: 0.8rem" href="/en-US/index.html"><span class="icon-flag-us">&nbsp;&nbsp;&nbsp;&nbsp;</span> <span class="icon-flag-gb">&nbsp;&nbsp;&nbsp;&nbsp;</span> <span class="icon-flag-ca">&nbsp;&nbsp;&nbsp;&nbsp;</span> English</a><br><a style="font-size: 0.8rem" href="/ru/index.html"><span class="icon-flag-ru">&nbsp;&nbsp;&nbsp;&nbsp;</span> Русский</a>
-                        </span>
+                        </span> -->
                     </div>
                 </nav>
 
@@ -138,7 +138,6 @@
                 
                 <!-- topmenu content start -->
                 <div class="d-none d-xl-block col sidemenu-solid text-end" style="line-height: 15px; padding: 8px 10px;">
-                    <a href="/en-US/index.html"><span class="icon-flag-us">&nbsp;&nbsp;&nbsp;&nbsp;</span> <span class="icon-flag-gb">&nbsp;&nbsp;&nbsp;&nbsp;</span> <span class="icon-flag-ca">&nbsp;&nbsp;&nbsp;&nbsp;</span> English</a> | <a href="/ru/index.html"><span class="icon-flag-ru">&nbsp;&nbsp;&nbsp;&nbsp;</span> Русский</a>
                 </div>
                 
                 <div style="margin: 0; padding: 0;" class="d-none d-xl-block">
@@ -269,7 +268,9 @@
                                 <div id="module_7_pricing_content"></div>
                             </div> -->
                             <p class="card-text">Secure your spot today! We will waive the $35 registration fee to the first 10 students!
-                                Call Us or Text: (908)830-5127 </p>  
+                            </p>   
+                            <br> 
+                            <p class="card-text">Call Us or Text: (908)830-5127 </p>  
                                 <br>                   
                             <p>Classes are held in Milltown, NJ 08850
                             <br>
@@ -285,3 +286,6 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js" integrity="sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/" crossorigin="anonymous"></script>
     </body>  
 </html>  
+
+<!-- <a href="/en-US/index.html"><span class="icon-flag-us">&nbsp;&nbsp;&nbsp;&nbsp;</span> <span class="icon-flag-gb">&nbsp;&nbsp;&nbsp;&nbsp;</span> <span class="icon-flag-ca">&nbsp;&nbsp;&nbsp;&nbsp;</span> English</a> | <a href="/ru/index.html"><span class="icon-flag-ru">&nbsp;&nbsp;&nbsp;&nbsp;</span> Русский</a> -->
+<!-- lang="ru" -->
