--- a/en-US/pages/module_3.html
+++ b/en-US/pages/module_3.html
@@ -33,9 +33,7 @@
                             <img src="/static/wolga-logo-green.png" alt="" width="30" height="24" class="d-inline-block align-text-top">
                             <span class="fs-5 link-dark logo-caption">Coding Prep School</span>
                         </span>
-                        <span class="text-end" style="padding-right: 10px;">
-                            <a style="font-size: 0.8rem" href="/en-US/index.html"><span class="icon-flag-us">&nbsp;&nbsp;&nbsp;&nbsp;</span> <span class="icon-flag-gb">&nbsp;&nbsp;&nbsp;&nbsp;</span> <span class="icon-flag-ca">&nbsp;&nbsp;&nbsp;&nbsp;</span> English</a><br><a style="font-size: 0.8rem" href="/ru/index.html"><span class="icon-flag-ru">&nbsp;&nbsp;&nbsp;&nbsp;</span> Русский</a>
-                        </span>
+                        
                     </div>
                 </nav>
 
@@ -121,9 +119,9 @@
                 <!-- mobile sidemenu content end -->
 
                 <!-- topmenu content start -->
-                <div class="d-none d-xl-block col sidemenu-solid text-end" style="line-height: 15px; padding: 8px 10px;">
+                <!-- <div class="d-none d-xl-block col sidemenu-solid text-end" style="line-height: 15px; padding: 8px 10px;">
                     <a href="/en-US/index.html"><span class="icon-flag-us">&nbsp;&nbsp;&nbsp;&nbsp;</span> <span class="icon-flag-gb">&nbsp;&nbsp;&nbsp;&nbsp;</span> <span class="icon-flag-ca">&nbsp;&nbsp;&nbsp;&nbsp;</span> English</a> | <a href="/ru/index.html"><span class="icon-flag-ru">&nbsp;&nbsp;&nbsp;&nbsp;</span> Русский</a>
-                </div>
+                </div> -->
                 
                 <div style="margin: 0; padding: 0;" class="d-none d-xl-block">
                 </div>
@@ -282,3 +280,6 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js" integrity="sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/" crossorigin="anonymous"></script>
     </body>  
 </html>  
+<!-- <span class="text-end" style="padding-right: 10px;">
+    <a style="font-size: 0.8rem" href="/en-US/index.html"><span class="icon-flag-us">&nbsp;&nbsp;&nbsp;&nbsp;</span> <span class="icon-flag-gb">&nbsp;&nbsp;&nbsp;&nbsp;</span> <span class="icon-flag-ca">&nbsp;&nbsp;&nbsp;&nbsp;</span> English</a><br><a style="font-size: 0.8rem" href="/ru/index.html"><span class="icon-flag-ru">&nbsp;&nbsp;&nbsp;&nbsp;</span> Русский</a>
+</span> -->
