index page second instance of lang flags removed

--- a/en-US/index.html
+++ b/en-US/index.html
@@ -119,9 +119,9 @@
                 <!-- mobile sidemenu content end -->
                                 
                 <!-- topmenu content start -->
-                <div class="d-none d-xl-block col sidemenu-solid text-end" style="line-height: 15px; padding: 8px 10px;">
+                <!-- <div class="d-none d-xl-block col sidemenu-solid text-end" style="line-height: 15px; padding: 8px 10px;">
                     <a href="/en-US/index.html"><span class="icon-flag-us">&nbsp;&nbsp;&nbsp;&nbsp;</span> <span class="icon-flag-gb">&nbsp;&nbsp;&nbsp;&nbsp;</span> <span class="icon-flag-ca">&nbsp;&nbsp;&nbsp;&nbsp;</span> English</a> | <a href="/ru/index.html"><span class="icon-flag-ru">&nbsp;&nbsp;&nbsp;&nbsp;</span> Русский</a>
-                </div>
+                </div> -->
                 
                 <div style="margin: 0; padding: 0;" class="d-none d-xl-block">
                 </div>
