Module 8 added a sentence

--- a/en-US/pages/module_8.html
+++ b/en-US/pages/module_8.html
@@ -237,7 +237,7 @@
                             <div class="row">
                                 <div class="col-12">
                                     <p>
-                                        In this course, students will develop the following Web Applications:
+                                        In this course, students will develop the following *Web Applications:
                                     </p>
                                     <ul>
                                         <li>To do list</li>
@@ -252,6 +252,7 @@
                                         <li>Sales Receipt App</li>
                                     </ul>  
                                     <br>
+                                    <p class="card text">Types of Web Applications are subject to change.</p>
                                     <!-- <h5 style="margin-bottom: 15px">Course duration – 25 classes.</h5> -->
                                     <!-- <h5>We do not recommend skipping classes in this course.</h5> -->
                                     <br>  
