Changed the signup page

--- a/en-US/pages/signup.html
+++ b/en-US/pages/signup.html
@@ -267,12 +267,12 @@
                             <div class="show_on_module_7">
                                 <div id="module_7_pricing_content"></div>
                             </div> -->
-                            <p class="card-text">Secure your spot today! We will waive the $35 registration fee to the first 10 students!
+                            <p class="card text-center">Secure your spot today! We will waive the $35 registration fee to the first 10 students!
                             </p>   
                             <br> 
-                            <p class="card-text">Call Us or Text: (908)830-5127 </p>  
+                            <p class="card text-center">Call Us or Text: (908)830-5127 </p>  
                                 <br>                   
-                            <p>Classes are held in Milltown, NJ 08850
+                            <p class="font-size 14">*Classes are held in Milltown, NJ 08850
                             <br>
                             
                         </div>
