--- a/en-US/pages/module_5.html
+++ b/en-US/pages/module_5.html
@@ -49,7 +49,7 @@
 
                         <ul class="nav nav-pills flex-column mb-auto">
                             <li class="nav-item">
-                                <a href="/en-US/index.html" class="nav-link link-dark" aria-current="page">
+                                <a href="/" class="nav-link link-dark" aria-current="page">
                                     <i class="fas fa-home"></i>
                                     Home Page
                                 </a>
@@ -140,7 +140,7 @@
                     <hr>
                     <ul class="nav nav-pills flex-column mb-auto">
                         <li class="nav-item">
-                            <a href="/en-US/index.html" class="nav-link link-dark" aria-current="page">
+                            <a href="/" class="nav-link link-dark" aria-current="page">
                                 <i class="fas fa-home"></i>
                                 Home Page
                             </a>
